--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "build:css": "postcss src/css/main.css -o .next/static/css/main.css",
     "build": "next build",
     "export": "next export",
     "start": "next start",
@@ -12,13 +13,22 @@
     "@mdi/js": "^7.0.96",
     "@reduxjs/toolkit": "^1.8.5",
     "chart.js": "^3.9.1",
+    "css-loader": "^6.5.2",
     "formik": "^2.2.9",
+    "mini-css-extract-plugin": "^2.7.6",
     "next": "^13.0.4",
     "numeral": "^2.0.6",
+    "postcss": "^8.4.23",
+    "postcss-cli": "^10.1.0",
+    "postcss-import": "^14.1.0",
+    "postcss-loader": "^6.1.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.0",
+    "style-loader": "^3.3.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
@@ -32,8 +42,6 @@
     "eslint": "^8.23.1",
     "eslint-config-next": "^13.0.4",
     "eslint-config-prettier": "^8.5.0",
-    "postcss": "^8.4.4",
-    "postcss-import": "^14.1.0",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^4.8.3"
