--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss-cli": "^10.1.0",
     "postcss-import": "^14.1.0",
     "postcss-loader": "^6.1.1",
+    "postcss-nesting": "^11.2.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
