--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "serve": "nodemon server",
     "dev": "next dev",
     "build:css": "postcss src/css/main.css -o .next/static/css/main.css",
     "build": "next build",
@@ -10,22 +11,43 @@
     "format": "prettier '{components,pages,src,interfaces,hooks}/**/*.{tsx,ts,js}' --write"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@mdi/js": "^7.0.96",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.3",
     "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^1.4.0",
+    "business-dashboard": "file:..",
     "chart.js": "^3.9.1",
+    "cors": "^2.8.5",
     "css-loader": "^6.5.2",
+    "dotenv": "^16.1.4",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "express": "^4.18.2",
     "formik": "^2.2.9",
+    "google-map-react": "^2.2.1",
     "mini-css-extract-plugin": "^2.7.6",
-    "next": "^13.0.4",
+    "mongoose": "^7.2.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "next": "^13.4.4",
+    "nodemon": "^2.0.22",
     "numeral": "^2.0.6",
+    "path": "^0.12.7",
     "postcss": "^8.4.23",
     "postcss-cli": "^10.1.0",
     "postcss-import": "^14.1.0",
     "postcss-loader": "^6.1.1",
     "postcss-nesting": "^11.2.2",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-icons": "^4.9.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.2",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.0",
